--- a/less/home-page.less
+++ b/less/home-page.less
@@ -23,18 +23,35 @@
     justify-content: center;
     animation: pop-in .6s ease-out forwards;
   }
+
 }
 
 .home {
-
+  width: 100%;
+  margin: 0 auto;
+  @media @phone{
+    width: 100%;
+  }
   .intro {
 
+    @media @phone{
+      width: 100%;
+      padding-bottom: 5%;
+    }     
     h2 {
       padding: 15px;
     }
 
     p {
       padding:0 15px;
+    }
+
+    img{
+      border-radius: 1%;
+      width: 100%;
+      @media @phone{
+        overflow-x: hidden;
+      }
     }
   
   }
