--- a/less/home-page.less
+++ b/less/home-page.less
@@ -66,6 +66,13 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+      @media @phone{
+        width: 90%;
+        margin: 0 5%;
+      }
+    }
+    .sky,.launch{
+      .img-none
     }
   }
 
@@ -79,6 +86,11 @@
     p {
       margin-top: 13px;
     }
+    @media @phone{
+      flex-direction: column-reverse;
+      margin: 0 auto;
+      padding: 15px;
+    }
   }
 
   .walk {
@@ -87,9 +99,19 @@
     padding: 50px 60px;
     display: flex;
     justify-content: center;
+    @media @phone{
+      flex-direction: column-reverse;
+      width: 100%;
+      margin: 10px;
+      padding: 10px 3%;
+    }
 
     .walk-text {
       width: 50%;
+      @media @phone{
+        width: 100%;
+        margin-top: 15px;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -100,18 +122,42 @@
       }
 
       .btn {
+        .btn-mk();
+        padding: 15px;
+        border-radius: 10px;
+        text-align: center;
+        background-color: @btn-bg-color;
+        cursor: pointer;
+        %:hover {
+            background-color: darken(dodgerblue, 5%);
+            color: darken(purple, 5%);
+        }
+        @media @phone{
+          width: 100%;
+          padding: 20px 0;
+        }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @phone{
+        width: 100%;
+        margin: 0 auto;
+      }
       
       img {
         width: 100%;
         height: auto;
         border-radius: 10px;
+
+        @media @phone{
+          width: 100%;
+          padding-top: 20px;
+        }
       }
     }
   }
-}// home
+// home
