--- a/less/home-page.less
+++ b/less/home-page.less
@@ -128,7 +128,7 @@
         text-align: center;
         background-color: @btn-bg-color;
         cursor: pointer;
-        %:hover {
+        &:hover {
             background-color: darken(dodgerblue, 5%);
             color: darken(purple, 5%);
         }
@@ -160,4 +160,5 @@
       }
     }
   }
+}
 // home
