finalised button hover

--- a/css/index.css
+++ b/css/index.css
@@ -343,7 +343,7 @@ footer {
 }
 .home .walk .walk-text .btn:hover {
   background-color: #0483ff;
-  color: #670066;
+  color: #191d2a;
 }
 @media (max-width: 500px) {
   .home .walk .walk-text .btn {
