--- a/less/home-page.less
+++ b/less/home-page.less
@@ -130,7 +130,7 @@
         cursor: pointer;
         &:hover {
             background-color: darken(dodgerblue, 5%);
-            color: darken(purple, 5%);
+            color: darken(@btn-bg-color, 5%);
         }
         @media @phone{
           width: 100%;
