--- a/css/index.css
+++ b/css/index.css
@@ -184,6 +184,17 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+#links {
+  display: flex;
+  justify-content: center;
+  justify-content: space-between;
+  font-size: 1.4rem;
+}
+#links a {
+  text-decoration: none;
+  color: #5E6164;
+  font-weight: bold;
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
